updated generated docs

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -3,6 +3,8 @@ Classes
 
 This is a complete list of available classes:
 
+- [`Piwik\Console\Command`](Piwik/Console/Command.md)
 - [`Piwik\Cookie`](Piwik/Cookie.md) &mdash; Simple class to handle the cookies: - read a cookie values - edit an existing cookie and save it - create a new cookie, set values, expiration date, etc.
 - [`Piwik\Http`](Piwik/Http.md) &mdash; Server-side http client to retrieve content from remote servers, and optionally save to a local file.
 - [`Piwik\IP`](Piwik/IP.md) &mdash; Handling IP addresses (both IPv4 and IPv6).
+- [`Piwik\Log`](Piwik/Log.md) &mdash; Logging utility.
