updated generated documentation

--- a/docs/master/1. Namespaces.md
+++ b/docs/master/1. Namespaces.md
@@ -4,4 +4,9 @@ Namespaces
 This is a complete list of available namespaces:
 
 - [`Piwik`](Piwik)
+- [`Piwik\API`](Piwik/API)
+- [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor)
 - [`Piwik\Console`](Piwik/Console)
+- [`Piwik\Period`](Piwik/Period)
+- [`Piwik\Plugins`](Piwik/Plugins)
+- [`Piwik\Plugins\CoreConsole`](Piwik/Plugins/CoreConsole)
