--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -3,8 +3,42 @@ Classes
 
 This is a complete list of available classes:
 
-- [`Piwik\Console\Command`](Piwik/Console/Command.md)
-- [`Piwik\Cookie`](Piwik/Cookie.md) &mdash; Simple class to handle the cookies: - read a cookie values - edit an existing cookie and save it - create a new cookie, set values, expiration date, etc.
+- [`Piwik\API\Request`](Piwik/API/Request.md) &mdash; An API request is the object used to make a call to the API and get the result.
+- [`Piwik\Archive`](Piwik/Archive.md) &mdash; The archive object is used to query specific data for a day or a period of statistics for a given website.
+- [`Piwik\ArchiveProcessor\Day`](Piwik/ArchiveProcessor/Day.md) &mdash; This class
+- [`Piwik\ArchiveProcessor\Period`](Piwik/ArchiveProcessor/Period.md) &mdash; This class provides generic methods to archive data for a period (week / month / year).
+- [`Piwik\CacheFile`](Piwik/CacheFile.md) &mdash; Code originally inspired from OpenX - openx/plugins_repo/openXDeliveryCacheStore/extensions/deliveryCacheStore/oxCacheFile/oxCacheFile.class.php - openx/plugins_repo/openXDeliveryCacheStore/extensions/deliveryCacheStore/oxCacheFile/oxCacheFile.delivery.php
+- [`Piwik\Common`](Piwik/Common.md) &mdash; Static class providing functions used by both the CORE of Piwik and the visitor Tracking engine.
+- [`Piwik\Config`](Piwik/Config.md) &mdash; For general performance (and specifically, the Tracker), we use deferred (lazy) initialization and cache sections.
+- [`Piwik\Console\Command`](Piwik/Console/Command.md) &mdash; BaseClass for console commands.
+- [`Piwik\Controller`](Piwik/Controller.md) &mdash; Parent class of all plugins Controllers (located in /plugins/PluginName/Controller.php It defines some helper functions controllers can use.
+- [`Piwik\DataTable`](Piwik/DataTable.md) &mdash; ---- DataTable A DataTable is a data structure used to store complex tables of data.
+- [`Piwik\Date`](Piwik/Date.md) &mdash; Date object widely used in Piwik.
+- [`Piwik\Db`](Piwik/Db.md) &mdash; SQL wrapper
+- [`Piwik\Filesystem`](Piwik/Filesystem.md) &mdash; Class Filesystem
 - [`Piwik\Http`](Piwik/Http.md) &mdash; Server-side http client to retrieve content from remote servers, and optionally save to a local file.
 - [`Piwik\IP`](Piwik/IP.md) &mdash; Handling IP addresses (both IPv4 and IPv6).
 - [`Piwik\Log`](Piwik/Log.md) &mdash; Logging utility.
+- [`Piwik\Metrics`](Piwik/Metrics.md) &mdash; This class holds the various mappings we use to internally store and manipulate metrics.
+- [`Piwik\MetricsFormatter`](Piwik/MetricsFormatter.md) &mdash; Class MetricsFormatter
+- [`Piwik\Nonce`](Piwik/Nonce.md) &mdash; Nonce class.
+- [`Piwik\Period\Day`](Piwik/Period/Day.md)
+- [`Piwik\Period\Month`](Piwik/Period/Month.md)
+- [`Piwik\Period\Range`](Piwik/Period/Range.md) &mdash; from a starting date to an ending date
+- [`Piwik\Period\Week`](Piwik/Period/Week.md)
+- [`Piwik\Period\Year`](Piwik/Period/Year.md)
+- [`Piwik\Piwik`](Piwik/Piwik.md) &mdash; Main piwik helper class.
+- [`Piwik\Plugins\CoreConsole\GenerateApi`](Piwik/Plugins/CoreConsole/GenerateApi.md)
+- [`Piwik\Plugins\CoreConsole\GenerateController`](Piwik/Plugins/CoreConsole/GenerateController.md)
+- [`Piwik\Plugins\CoreConsole\GeneratePlugin`](Piwik/Plugins/CoreConsole/GeneratePlugin.md)
+- [`Piwik\Plugins\CoreConsole\GeneratePluginBase`](Piwik/Plugins/CoreConsole/GeneratePluginBase.md)
+- [`Piwik\Plugins\CoreConsole\RunTests`](Piwik/Plugins/CoreConsole/RunTests.md)
+- [`Piwik\Plugins\CoreConsole\WatchLog`](Piwik/Plugins/CoreConsole/WatchLog.md)
+- [`Piwik\ScheduledTask`](Piwik/ScheduledTask.md) &mdash; ScheduledTask is used by the task scheduler and by plugins to configure runnable tasks.
+- [`Piwik\SettingsPiwik`](Piwik/SettingsPiwik.md) &mdash; Class SettingsPiwik
+- [`Piwik\Site`](Piwik/Site.md)
+- [`Piwik\Url`](Piwik/Url.md) &mdash; Class to retrieve absolute URL or URI components of the current URL, and handle URL redirection.
+- [`Piwik\UrlHelper`](Piwik/UrlHelper.md) &mdash; Class UrlHelper
+- [`Piwik\Version`](Piwik/Version.md) &mdash; Piwik version information.
+- [`Piwik\View`](Piwik/View.md) &mdash; View class to render the user interface
+- [`Piwik\ViewDataTable`](Piwik/ViewDataTable.md) &mdash; This class is used to load (from the API) and customize the output of a given DataTable.
