format index page

--- a/docs/2.0-a11/4. Index.md
+++ b/docs/2.0-a11/4. Index.md
@@ -1,33 +1,19 @@
 Index
 =====
-Letters
----------
- * A
- * B
- * C
- * D
- * E
- * F
- * G
- * H
- * I
- * J
- * K
- * L
- * M
- * N
- * O
- * P
- * Q
- * R
- * S
- * T
- * U
- * V
- * W
- * X
- * Y
- * Z
+### Letters
+ * [C](#c)
 
 
-### C* [`Common`](Piwik/Common.md) &mdash; _Class in namespace Piwik_ Static class providing functions used by both the CORE of Piwik and the visitor Tracking engine.* [`Config`](Piwik/Config.md) &mdash; _Class in namespace Piwik_ For general performance (and specifically, the Tracker), we use deferred (lazy) initialization and cache sections.### L* [`Log`](Piwik/Log.md) &mdash; _Class in namespace Piwik_ Logging utility.### P* [`Piwik`](Piwik/Piwik.md) &mdash; _Class in namespace Piwik_ Main piwik helper class.
+
+### C
+
+- [`Common`](Piwik/Common.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`Config`](Piwik/Config.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+
+### L
+
+- [`Log`](Piwik/Log.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+
+### P
+
+- [`Piwik`](Piwik/Piwik.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
