include latest api classes

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -11,7 +11,10 @@ This is a complete list of available classes:
 - [`Piwik\Common`](Piwik/Common.md) &mdash; Static class providing functions used by both the CORE of Piwik and the visitor Tracking engine.
 - [`Piwik\Config`](Piwik/Config.md) &mdash; For general performance (and specifically, the Tracker), we use deferred (lazy) initialization and cache sections.
 - [`Piwik\Controller`](Piwik/Controller.md) &mdash; Parent class of all plugins Controllers (located in /plugins/PluginName/Controller.php It defines some helper functions controllers can use.
+- [`Piwik\Controller\Admin`](Piwik/Controller/Admin.md) &mdash; Parent class of all plugins Controllers with admin functions
 - [`Piwik\DataTable`](Piwik/DataTable.md) &mdash; ---- DataTable A DataTable is a data structure used to store complex tables of data.
+- [`Piwik\DataTable\Map`](Piwik/DataTable/Map.md) &mdash; The DataTable Map is a way to store an array of dataTable.
+- [`Piwik\DataTable\Row`](Piwik/DataTable/Row.md) &mdash; A DataTable is composed of rows.
 - [`Piwik\Date`](Piwik/Date.md) &mdash; Date object widely used in Piwik.
 - [`Piwik\Db`](Piwik/Db.md) &mdash; SQL wrapper
 - [`Piwik\Filesystem`](Piwik/Filesystem.md) &mdash; Class Filesystem
@@ -27,7 +30,12 @@ This is a complete list of available classes:
 - [`Piwik\Period\Week`](Piwik/Period/Week.md)
 - [`Piwik\Period\Year`](Piwik/Period/Year.md)
 - [`Piwik\Piwik`](Piwik/Piwik.md) &mdash; Main piwik helper class.
+- [`Piwik\Plugin`](Piwik/Plugin.md) &mdash; Abstract class to define a Plugin.
 - [`Piwik\ScheduledTask`](Piwik/ScheduledTask.md) &mdash; ScheduledTask is used by the task scheduler and by plugins to configure runnable tasks.
+- [`Piwik\ScheduledTime\Daily`](Piwik/ScheduledTime/Daily.md) &mdash; Daily class is used to schedule tasks every day.
+- [`Piwik\ScheduledTime\Hourly`](Piwik/ScheduledTime/Hourly.md) &mdash; Hourly class is used to schedule tasks every hour.
+- [`Piwik\ScheduledTime\Monthly`](Piwik/ScheduledTime/Monthly.md) &mdash; Monthly class is used to schedule tasks every month.
+- [`Piwik\ScheduledTime\Weekly`](Piwik/ScheduledTime/Weekly.md) &mdash; Weekly class is used to schedule tasks every week.
 - [`Piwik\SettingsPiwik`](Piwik/SettingsPiwik.md) &mdash; Class SettingsPiwik
 - [`Piwik\Site`](Piwik/Site.md)
 - [`Piwik\Url`](Piwik/Url.md) &mdash; Class to retrieve absolute URL or URI components of the current URL, and handle URL redirection.
