--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -31,6 +31,7 @@ Index
 - [`Archive`](Piwik/Archive.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`aggregateDataTableReports()`](Piwik/ArchiveProcessor/Period.md#aggregateDataTableReports) &mdash; _Method in class_ [`Period`](Piwik/ArchiveProcessor/Period.md)
 - [`aggregateNumericMetrics()`](Piwik/ArchiveProcessor/Period.md#aggregateNumericMetrics) &mdash; _Method in class_ [`Period`](Piwik/ArchiveProcessor/Period.md)
+- [`Admin`](Piwik/Controller/Admin.md) &mdash; _Class in namespace_ [`Piwik\Controller`](Piwik/Controller)
 - [`applyQueuedFilters()`](Piwik/DataTable.md#applyQueuedFilters) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`addDataTable()`](Piwik/DataTable.md#addDataTable) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`addRow()`](Piwik/DataTable.md#addRow) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -40,12 +41,20 @@ Index
 - [`addRowsFromSerializedArray()`](Piwik/DataTable.md#addRowsFromSerializedArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`addRowsFromArray()`](Piwik/DataTable.md#addRowsFromArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`addRowsFromSimpleArray()`](Piwik/DataTable.md#addRowsFromSimpleArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`applyQueuedFilters()`](Piwik/DataTable/Map.md#applyQueuedFilters) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`addTable()`](Piwik/DataTable/Map.md#addTable) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`addDataTable()`](Piwik/DataTable/Map.md#addDataTable) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`addSubtable()`](Piwik/DataTable/Row.md#addSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`addColumn()`](Piwik/DataTable/Row.md#addColumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`addColumns()`](Piwik/DataTable/Row.md#addColumns) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`addMetadata()`](Piwik/DataTable/Row.md#addMetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`adjustForTimezone()`](Piwik/Date.md#adjustForTimezone) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`addDay()`](Piwik/Date.md#addDay) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`addHour()`](Piwik/Date.md#addHour) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`addHourTo()`](Piwik/Date.md#addHourTo) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`addPeriod()`](Piwik/Date.md#addPeriod) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`addSubperiod()`](Piwik/Period/Day.md#addSubperiod) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
+- [`activate()`](Piwik/Plugin.md#activate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`addForm()`](Piwik/View.md#addForm) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`assign()`](Piwik/View.md#assign) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`$atatable_css_class()`](Piwik/ViewDataTable.md#$atatable_css_class) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
@@ -61,6 +70,9 @@ Index
 - [`Common`](Piwik/Common.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`Config`](Piwik/Config.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`Controller`](Piwik/Controller.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`$c()`](Piwik/DataTable/Row.md#$c) &mdash; _Property in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`cleanPostSerialize()`](Piwik/DataTable/Row.md#cleanPostSerialize) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`compareElements()`](Piwik/DataTable/Row.md#compareElements) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`compareWeek()`](Piwik/Date.md#compareWeek) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`compareMonth()`](Piwik/Date.md#compareMonth) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`createDatabaseObject()`](Piwik/Db.md#createDatabaseObject) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
@@ -86,12 +98,18 @@ Index
 - [`Day`](Piwik/ArchiveProcessor/Day.md) &mdash; _Class in namespace_ [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor)
 - [`delete()`](Piwik/CacheFile.md#delete) &mdash; _Method in class_ [`CacheFile`](Piwik/CacheFile.md)
 - [`deleteAll()`](Piwik/CacheFile.md#deleteAll) &mdash; _Method in class_ [`CacheFile`](Piwik/CacheFile.md)
+- [`displayWarningIfConfigFileNotWritable()`](Piwik/Controller/Admin.md#displayWarningIfConfigFileNotWritable) &mdash; _Method in class_ [`Admin`](Piwik/Controller/Admin.md)
 - [`DataTable`](Piwik/DataTable.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`deleteColumn()`](Piwik/DataTable.md#deleteColumn) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`deleteColumns()`](Piwik/DataTable.md#deleteColumns) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`deleteRow()`](Piwik/DataTable.md#deleteRow) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`deleteRowsOffset()`](Piwik/DataTable.md#deleteRowsOffset) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`deleteRows()`](Piwik/DataTable.md#deleteRows) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`deleteColumns()`](Piwik/DataTable/Map.md#deleteColumns) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`deleteRow()`](Piwik/DataTable/Map.md#deleteRow) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`deleteColumn()`](Piwik/DataTable/Map.md#deleteColumn) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`deleteColumn()`](Piwik/DataTable/Row.md#deleteColumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`deleteMetadata()`](Piwik/DataTable/Row.md#deleteMetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`Date`](Piwik/Date.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`Db`](Piwik/Db.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`deleteAllRows()`](Piwik/Db.md#deleteAllRows) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
@@ -101,11 +119,14 @@ Index
 - [`debug()`](Piwik/Log.md#debug) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
 - [`discardNonce()`](Piwik/Nonce.md#discardNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
 - [`Day`](Piwik/Period/Day.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
+- [`deactivate()`](Piwik/Plugin.md#deactivate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`Daily`](Piwik/ScheduledTime/Daily.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 
 ### E
 
 - [`enableRecursiveSort()`](Piwik/DataTable.md#enableRecursiveSort) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`enableRecursiveFilters()`](Piwik/DataTable.md#enableRecursiveFilters) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`enableRecursiveSort()`](Piwik/DataTable/Map.md#enableRecursiveSort) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`exec()`](Piwik/Db.md#exec) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`error()`](Piwik/Log.md#error) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
 - [`exitWithErrorMessage()`](Piwik/Piwik.md#exitWithErrorMessage) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
@@ -123,6 +144,7 @@ Index
 - [`forceSave()`](Piwik/Config.md#forceSave) &mdash; _Method in class_ [`Config`](Piwik/Config.md)
 - [`filter()`](Piwik/DataTable.md#filter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`fromSerializedArray()`](Piwik/DataTable.md#fromSerializedArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`filter()`](Piwik/DataTable/Map.md#filter) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`factory()`](Piwik/Date.md#factory) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`fetchAll()`](Piwik/Db.md#fetchAll) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`fetchRow()`](Piwik/Db.md#fetchRow) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
@@ -181,6 +203,20 @@ Index
 - [`getAllTableMetadata()`](Piwik/DataTable.md#getAllTableMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getMetadata()`](Piwik/DataTable.md#getMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getColumnAggregationOperations()`](Piwik/DataTable.md#getColumnAggregationOperations) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`getKeyName()`](Piwik/DataTable/Map.md#getKeyName) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`getRowsCount()`](Piwik/DataTable/Map.md#getRowsCount) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`getDataTables()`](Piwik/DataTable/Map.md#getDataTables) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`getTable()`](Piwik/DataTable/Map.md#getTable) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`getFirstRow()`](Piwik/DataTable/Map.md#getFirstRow) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`getColumn()`](Piwik/DataTable/Map.md#getColumn) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`getEmptyClone()`](Piwik/DataTable/Map.md#getEmptyClone) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`getMetadataIntersectArray()`](Piwik/DataTable/Map.md#getMetadataIntersectArray) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`getColumns()`](Piwik/DataTable/Map.md#getColumns) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`getColumn()`](Piwik/DataTable/Row.md#getColumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`getMetadata()`](Piwik/DataTable/Row.md#getMetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`getColumns()`](Piwik/DataTable/Row.md#getColumns) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`getIdSubDataTable()`](Piwik/DataTable/Row.md#getIdSubDataTable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`getSubtable()`](Piwik/DataTable/Row.md#getSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`getDatetime()`](Piwik/Date.md#getDatetime) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`getDateStartUTC()`](Piwik/Date.md#getDateStartUTC) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`getDateEndUTC()`](Piwik/Date.md#getDateEndUTC) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
@@ -243,6 +279,11 @@ Index
 - [`getCurrentUserTokenAuth()`](Piwik/Piwik.md#getCurrentUserTokenAuth) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`getModule()`](Piwik/Piwik.md#getModule) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`getAction()`](Piwik/Piwik.md#getAction) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
+- [`getInformation()`](Piwik/Plugin.md#getInformation) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`getListHooksRegistered()`](Piwik/Plugin.md#getListHooksRegistered) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`getVersion()`](Piwik/Plugin.md#getVersion) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`getPluginName()`](Piwik/Plugin.md#getPluginName) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`getPluginNameFromBacktrace()`](Piwik/Plugin.md#getPluginNameFromBacktrace) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`getObjectInstance()`](Piwik/ScheduledTask.md#getObjectInstance) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`getClassName()`](Piwik/ScheduledTask.md#getClassName) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`getMethodName()`](Piwik/ScheduledTask.md#getMethodName) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
@@ -252,6 +293,10 @@ Index
 - [`getPriority()`](Piwik/ScheduledTask.md#getPriority) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`getName()`](Piwik/ScheduledTask.md#getName) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`getTaskName()`](Piwik/ScheduledTask.md#getTaskName) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
+- [`getRescheduledTime()`](Piwik/ScheduledTime/Daily.md#getRescheduledTime) &mdash; _Method in class_ [`Daily`](Piwik/ScheduledTime/Daily.md)
+- [`getRescheduledTime()`](Piwik/ScheduledTime/Hourly.md#getRescheduledTime) &mdash; _Method in class_ [`Hourly`](Piwik/ScheduledTime/Hourly.md)
+- [`getRescheduledTime()`](Piwik/ScheduledTime/Monthly.md#getRescheduledTime) &mdash; _Method in class_ [`Monthly`](Piwik/ScheduledTime/Monthly.md)
+- [`getRescheduledTime()`](Piwik/ScheduledTime/Weekly.md#getRescheduledTime) &mdash; _Method in class_ [`Weekly`](Piwik/ScheduledTime/Weekly.md)
 - [`getSalt()`](Piwik/SettingsPiwik.md#getSalt) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`getKnownSegmentsToArchive()`](Piwik/SettingsPiwik.md#getKnownSegmentsToArchive) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`getKnownSegmentsToArchiveForSite()`](Piwik/SettingsPiwik.md#getKnownSegmentsToArchiveForSite) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
@@ -309,6 +354,7 @@ Index
 ### H
 
 - [`Http`](Piwik/Http.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`Hourly`](Piwik/ScheduledTime/Hourly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 - [`$how_visualization_only()`](Piwik/ViewDataTable.md#$how_visualization_only) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`$how_goals()`](Piwik/ViewDataTable.md#$how_goals) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`$how_exclude_low_population()`](Piwik/ViewDataTable.md#$how_exclude_low_population) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
@@ -338,6 +384,9 @@ Index
 
 - [`$invalidateOpCacheBeforeRead()`](Piwik/CacheFile.md#$invalidateOpCacheBeforeRead) &mdash; _Property in class_ [`CacheFile`](Piwik/CacheFile.md)
 - [`isEqual()`](Piwik/DataTable.md#isEqual) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`isSubtableLoaded()`](Piwik/DataTable/Row.md#isSubtableLoaded) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`isSummaryRow()`](Piwik/DataTable/Row.md#isSummaryRow) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`isEqual()`](Piwik/DataTable/Row.md#isEqual) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`isLater()`](Piwik/Date.md#isLater) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`isEarlier()`](Piwik/Date.md#isEarlier) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`isToday()`](Piwik/Date.md#isToday) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
@@ -358,6 +407,8 @@ Index
 - [`isUserHasViewAccess()`](Piwik/Piwik.md#isUserHasViewAccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`isUserHasSomeViewAccess()`](Piwik/Piwik.md#isUserHasSomeViewAccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`isValidEmailString()`](Piwik/Piwik.md#isValidEmailString) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
+- [`install()`](Piwik/Plugin.md#install) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`isTheme()`](Piwik/Plugin.md#isTheme) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`isUserCredentialsSanityCheckEnabled()`](Piwik/SettingsPiwik.md#isUserCredentialsSanityCheckEnabled) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`isSegmentationEnabled()`](Piwik/SettingsPiwik.md#isSegmentationEnabled) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`isUniqueVisitorsEnabled()`](Piwik/SettingsPiwik.md#isUniqueVisitorsEnabled) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
@@ -403,6 +454,10 @@ Index
 - [`makeFromIndexedArray()`](Piwik/DataTable.md#makeFromIndexedArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`mergeSubtables()`](Piwik/DataTable.md#mergeSubtables) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`makeFromSimpleArray()`](Piwik/DataTable.md#makeFromSimpleArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`Map`](Piwik/DataTable/Map.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable)
+- [`mergeChildren()`](Piwik/DataTable/Map.md#mergeChildren) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`mergeSubtables()`](Piwik/DataTable/Map.md#mergeSubtables) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`$maxVisitsSummed()`](Piwik/DataTable/Row.md#$maxVisitsSummed) &mdash; _Property in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`mkdir()`](Piwik/Filesystem.md#mkdir) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`Metrics`](Piwik/Metrics.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`$mappingFromIdToName()`](Piwik/Metrics.md#$mappingFromIdToName) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
@@ -412,6 +467,7 @@ Index
 - [`Month`](Piwik/Period/Month.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
 - [`$methodName()`](Piwik/ScheduledTask.md#$methodName) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`$methodParameter()`](Piwik/ScheduledTask.md#$methodParameter) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
+- [`Monthly`](Piwik/ScheduledTime/Monthly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 
 ### N
 
@@ -440,12 +496,15 @@ Index
 - [`prettyPrint()`](Piwik/IP.md#prettyPrint) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`parseDateRange()`](Piwik/Period/Range.md#parseDateRange) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`Piwik`](Piwik/Piwik.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`Plugin`](Piwik/Plugin.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`postLoad()`](Piwik/Plugin.md#postLoad) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`$priority()`](Piwik/ScheduledTask.md#$priority) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`$piwikUrlCache()`](Piwik/SettingsPiwik.md#$piwikUrlCache) &mdash; _Property in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 
 ### Q
 
 - [`queueFilter()`](Piwik/DataTable.md#queueFilter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`queueFilter()`](Piwik/DataTable/Map.md#queueFilter) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`query()`](Piwik/Db.md#query) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 
 ### R
@@ -454,6 +513,10 @@ Index
 - [`reloadAuthUsingTokenAuth()`](Piwik/API/Request.md#reloadAuthUsingTokenAuth) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
 - [`redirectToIndex()`](Piwik/Controller.md#redirectToIndex) &mdash; _Method in class_ [`Controller`](Piwik/Controller.md)
 - [`renameColumn()`](Piwik/DataTable.md#renameColumn) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`renameColumn()`](Piwik/DataTable/Map.md#renameColumn) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`Row`](Piwik/DataTable/Row.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable)
+- [`renameColumn()`](Piwik/DataTable/Row.md#renameColumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`removeSubtable()`](Piwik/DataTable/Row.md#removeSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`releaseDbLock()`](Piwik/Db.md#releaseDbLock) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`realpath()`](Piwik/Filesystem.md#realpath) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`Range`](Piwik/Period/Range.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
@@ -473,6 +536,7 @@ Index
 - [`set()`](Piwik/CacheFile.md#set) &mdash; _Method in class_ [`CacheFile`](Piwik/CacheFile.md)
 - [`setHostValidationVariablesView()`](Piwik/Controller.md#setHostValidationVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Controller.md)
 - [`setPeriodVariablesView()`](Piwik/Controller.md#setPeriodVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Controller.md)
+- [`setBasicVariablesAdminView()`](Piwik/Controller/Admin.md#setBasicVariablesAdminView) &mdash; _Method in class_ [`Admin`](Piwik/Controller/Admin.md)
 - [`sort()`](Piwik/DataTable.md#sort) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setRowsCountBeforeLimitFilter()`](Piwik/DataTable.md#setRowsCountBeforeLimitFilter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setMaximumDepthLevelAllowedAtLeast()`](Piwik/DataTable.md#setMaximumDepthLevelAllowedAtLeast) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -480,6 +544,14 @@ Index
 - [`setMaximumAllowedRows()`](Piwik/DataTable.md#setMaximumAllowedRows) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setColumnAggregationOperation()`](Piwik/DataTable.md#setColumnAggregationOperation) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setColumnAggregationOperations()`](Piwik/DataTable.md#setColumnAggregationOperations) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`setKeyName()`](Piwik/DataTable/Map.md#setKeyName) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`sumSubtable()`](Piwik/DataTable/Row.md#sumSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`setSubtable()`](Piwik/DataTable/Row.md#setSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`setColumns()`](Piwik/DataTable/Row.md#setColumns) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`setColumn()`](Piwik/DataTable/Row.md#setColumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`setMetadata()`](Piwik/DataTable/Row.md#setMetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`sumRow()`](Piwik/DataTable/Row.md#sumRow) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`sumRowMetadata()`](Piwik/DataTable/Row.md#sumRowMetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`setTimezone()`](Piwik/Date.md#setTimezone) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`setTime()`](Piwik/Date.md#setTime) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`setDay()`](Piwik/Date.md#setDay) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
@@ -503,6 +575,12 @@ Index
 - [`setUserIsSuperUser()`](Piwik/Piwik.md#setUserIsSuperUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`ScheduledTask`](Piwik/ScheduledTask.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`$scheduledTime()`](Piwik/ScheduledTask.md#$scheduledTime) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
+- [`setDay()`](Piwik/ScheduledTime/Daily.md#setDay) &mdash; _Method in class_ [`Daily`](Piwik/ScheduledTime/Daily.md)
+- [`setHour()`](Piwik/ScheduledTime/Hourly.md#setHour) &mdash; _Method in class_ [`Hourly`](Piwik/ScheduledTime/Hourly.md)
+- [`setDay()`](Piwik/ScheduledTime/Hourly.md#setDay) &mdash; _Method in class_ [`Hourly`](Piwik/ScheduledTime/Hourly.md)
+- [`setDay()`](Piwik/ScheduledTime/Monthly.md#setDay) &mdash; _Method in class_ [`Monthly`](Piwik/ScheduledTime/Monthly.md)
+- [`setDayOfWeek()`](Piwik/ScheduledTime/Monthly.md#setDayOfWeek) &mdash; _Method in class_ [`Monthly`](Piwik/ScheduledTime/Monthly.md)
+- [`setDay()`](Piwik/ScheduledTime/Weekly.md#setDay) &mdash; _Method in class_ [`Weekly`](Piwik/ScheduledTime/Weekly.md)
 - [`SettingsPiwik`](Piwik/SettingsPiwik.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`Site`](Piwik/Site.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`setSites()`](Piwik/Site.md#setSites) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
@@ -527,6 +605,7 @@ Index
 - [`unprefixTable()`](Piwik/Common.md#unprefixTable) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`unlockAllTables()`](Piwik/Db.md#unlockAllTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`unlinkRecursive()`](Piwik/Filesystem.md#unlinkRecursive) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
+- [`uninstall()`](Piwik/Plugin.md#uninstall) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`Url`](Piwik/Url.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`UrlHelper`](Piwik/UrlHelper.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`$ustom_parameters()`](Piwik/ViewDataTable.md#$ustom_parameters) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
@@ -545,6 +624,7 @@ Index
 - [`walkPath()`](Piwik/DataTable.md#walkPath) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`warning()`](Piwik/Log.md#warning) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
 - [`Week`](Piwik/Period/Week.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
+- [`Weekly`](Piwik/ScheduledTime/Weekly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 
 ### X
 
@@ -567,9 +647,15 @@ Index
 - [`__destruct()`](Piwik/DataTable.md#__destruct) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`__sleep()`](Piwik/DataTable.md#__sleep) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`__toString()`](Piwik/DataTable.md#__toString) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`__toString()`](Piwik/DataTable/Map.md#__toString) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
+- [`__construct()`](Piwik/DataTable/Row.md#__construct) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`__sleep()`](Piwik/DataTable/Row.md#__sleep) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`__destruct()`](Piwik/DataTable/Row.md#__destruct) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`__toString()`](Piwik/DataTable/Row.md#__toString) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`__toString()`](Piwik/Date.md#__toString) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`__toString()`](Piwik/Period/Day.md#__toString) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
 - [`__construct()`](Piwik/Period/Range.md#__construct) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
+- [`__construct()`](Piwik/Plugin.md#__construct) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`__construct()`](Piwik/ScheduledTask.md#__construct) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`__construct()`](Piwik/Site.md#__construct) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`__toString()`](Piwik/Site.md#__toString) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
