--- a/docs/master/1. Namespaces.md
+++ b/docs/master/1. Namespaces.md
@@ -6,4 +6,7 @@ This is a complete list of available namespaces:
 - [`Piwik`](Piwik)
 - [`Piwik\API`](Piwik/API)
 - [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor)
+- [`Piwik\Controller`](Piwik/Controller)
+- [`Piwik\DataTable`](Piwik/DataTable)
 - [`Piwik\Period`](Piwik/Period)
+- [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
